--- a/models/ldm/inpainting_big/config.yaml
+++ b/models/ldm/inpainting_big/config.yaml
@@ -1,6 +1,7 @@
 model:
   base_learning_rate: 1.0e-06
   target: ldm.models.diffusion.ddpm.LatentDiffusion
+  
   params:
     linear_start: 0.0015
     linear_end: 0.0205
@@ -9,6 +10,7 @@ model:
     loss_type: l1
     first_stage_key: image
     cond_stage_key: masked_image  #MJ: conditioning_key: is not defined, it means that conditionining_key: concat
+    #conditioning_key: hybrid     #MJ: For debugging
     image_size: 64
     channels: 3
     concat_mode: true
@@ -26,7 +28,7 @@ model:
       target: ldm.modules.diffusionmodules.openaimodel.UNetModel
       params:
         image_size: 64
-        in_channels: 7
+        in_channels: 7    #MJ: 7 = 3+1+3 rather than 4+1+4 = 9
         out_channels: 3
         model_channels: 256
         attention_resolutions:
@@ -55,7 +57,7 @@ model:
           in_channels: 3
           out_ch: 3
           ch: 128
-          ch_mult:
+          ch_mult:  #MJ: f = 2^(3-1) = 4
           - 1
           - 2
           - 4
